samples/_failures_safe/1761165594_76e8a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1fb65dc.c: In function ‘main’:
./samples/SAFE/__tmp_e1fb65dc.c:144:9: error: expected expression at end of input
  144 |         if (rows1 == -1 || cols1 == -1 || rows2 == -1 ||
      |         ^~
./samples/SAFE/__tmp_e1fb65dc.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1fb65dc.c:144:9: error: expected declaration or statement at end of input
